--- a/src/EcosiaPrime.Gui/EcosiaPrime.Gui.csproj
+++ b/src/EcosiaPrime.Gui/EcosiaPrime.Gui.csproj
@@ -8,4 +8,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EcosiaPrime.Contracts\EcosiaPrime.Contracts.csproj" />
+  </ItemGroup>
+
 </Project>
