--- a/src/EcosiaPrime.Gui/EcosiaPrime.Gui.csproj
+++ b/src/EcosiaPrime.Gui/EcosiaPrime.Gui.csproj
@@ -9,6 +9,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\EcosiaPrime.Contracts\EcosiaPrime.Contracts.csproj" />
   </ItemGroup>
 
