got data out of json

--- a/src/EcosiaPrime.Gui/EcosiaPrime.Gui.csproj
+++ b/src/EcosiaPrime.Gui/EcosiaPrime.Gui.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EcosiaPrime.Contracts\EcosiaPrime.Contracts.csproj" />
+    <ProjectReference Include="..\EcosiaPrime.MongoDB\EcosiaPrime.MongoDB.csproj" />
   </ItemGroup>
 
 </Project>
