--- a/src/EcosiaPrime.MongoDB/EcosiaPrime.MongoDB.csproj
+++ b/src/EcosiaPrime.MongoDB/EcosiaPrime.MongoDB.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="MongoDB.Driver" Version="2.15.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EcosiaPrime.Contracts\EcosiaPrime.Contracts.csproj" />
+  </ItemGroup>
+
 </Project>
