--- a/src/EcosiaPrime.Gui/EcosiaPrime.Gui.csproj
+++ b/src/EcosiaPrime.Gui/EcosiaPrime.Gui.csproj
@@ -19,4 +19,10 @@
     <ProjectReference Include="..\EcosiaPrime.MongoDB\EcosiaPrime.MongoDB.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
