--- a/src/EcosiaPrime.Contracts/EcosiaPrime.Contracts.csproj
+++ b/src/EcosiaPrime.Contracts/EcosiaPrime.Contracts.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Update="Pictures\EcosiaPrimeLogoBig.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
